assets/frontend/css/styles.css
/* ... */
aside#related-products ul.products-grid li h2.current-price {
    margin-top: 25px;
    float:none;
}

aside#related-products ul.products-grid li h3.original-price {
    float:none;
    padding:0;
}

aside#related-products ul.products-grid li h3.original-price + h2.current-price {
    margin-top: 0;
    height:auto;
    width:auto;
    text-align:center;
}

aside#related-products a.minimal-price-link {
    display:none;
}

aside#related-products ul.products-grid li:nth-child(3n) {
    border-right: 1px dotted;
    padding-right: 19px;
}

aside#related-products ul.products-grid li:nth-child(4n) {
    border-right: none;
    padding-right: 20px;
}

aside#related-products  ul.products-grid li a.review-amount {
    display: block;
}

aside#related-products ul.products-grid li a.review-amount {
    clear: both;
}

/* ----------------------------- PRODUCT TAGS */

aside#product-tags {
    border: 1px solid;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 10px 20px 20px 20px;
    margin-bottom: 20px;
}

aside#product-tags ul {
    overflow: hidden;
}

div.box-tags .tags li,
aside#product-tags ul li {
    float: left;
    list-style-type: none;
}

div.box-tags .tags li a,
aside#product-tags ul li a {
    border: 1px solid;
    -moz-border-radius-topleft: 10px;
    -moz-border-radius-topright: 2px;
    -moz-border-radius-bottomright: 2px;
    -moz-border-radius-bottomleft: 10px;
    border-top-left-radius: 10px;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    border-bottom-left-radius: 10px;
    display: block;
    margin: 2px 5px 2px 0;
    padding: 2px 5px 2px 18px;
}

aside#product-tags form {
    clear: both;
    float: right;
    margin-top: 20px;
    padding-bottom: 10px;
    overflow: hidden;
    width: auto;
}

aside#product-tags form label,
aside#product-tags form input {
    float: left;
}

aside#product-tags form input {
    margin-left: 10px;
    width: auto;
}

aside#product-tags form input.text {
    width: 320px;
}

aside#product-tags p.note {
    clear: both;
}

div.box-tags .hproduct {
    float: left;
    width: 50%;
    margin-bottom:20px;
    list-style-type: none;
}

div.box-tags .hproduct img.photo {
    border: 1px solid;
    float: left;
    margin: 0 10px 10px 0;
}

table#my-tags-table button {
    width: 115px;
}

table#my-tags-table ul.add-to-links {
    list-style-type: none;
}

div.box-tags + div.buttons-set {
    clear: both;
}

/* ----------------------------- CART PAGE */

body.checkout-cart h1 {
    float: left;
    padding-left: 20px;
}

body.checkout-cart-configure h1 {
    float:none;
    padding:0;
}

.cart-empty {
    clear:both;
    padding-left:20px;
}

ul.checkout-types {
    list-style-type: none;
    overflow: hidden;
}

ul.checkout-types li button.cart {
    float: right;
}

/* Cart contents table */

form#cart-form {
    clear: both;
    width:100%;
}

table.data-table {
    border: 1px solid;
    border-spacing: 0;  
    margin: 20px 0;
    width: 100%;
}

table.data-table thead tr th {
    border-bottom: 1px solid;
}

table.data-table tfoot tr td {
    border-top: 1px solid;
    padding: 10px 20px;
}

table.data-table thead th {
    text-align: left;
    padding: 0 10px;
}

table.data-table tbody tr {
    border-bottom: 1px solid;
}

table.data-table tbody tr td,
ol#checkoutSteps li table#checkout-review-table tfoot tr td {
    border-right: 1px solid;
    padding: 5px 10px;
}

table.data-table tbody tr td:last-child {
    border-right: none;
}

table.data-table tbody tr td.product-image {
    padding: 10px 20px;
    width: 79px;
}

table.data-table tbody tr td.product-image a {
    display: block;
    height: 79px;
    width: 79px;
}

table.data-table tbody tr td.product-image img {
    border: 1px solid;
}

table.data-table tbody tr td.product-name {
    width: 40%;
}

table.data-table tbody tr td.product-name h3 {
    padding-bottom: 0;
}

table.data-table tbody tr td.product-name a {
    float: left;
}

table.data-table tbody tr td.product-name a.edit-item {
    float:right;
}

table.data-table tbody tr td.qty,
table.data-table tbody tr td.remove {
    width: 40px;
}

table.data-table tbody tr td.qty input {
    width:auto;
}

table.data-table td.remove a.remove {
    background: url(../images/icon-remove.gif) center center no-repeat;
    border: none;
    text-indent: -999999px;
    opacity: 0.9;
}

table.data-table td.remove a.remove:hover {
    opacity: 1;
}

/* Register / Login */

#login-form div.buttons-set a,
#login-form div.buttons-set button {
    float:left;
}

#login-form div.buttons-set button {
    margin-left:55px;
}

#login-form div.col2-set p { 
    padding-right:20px;
}

/* Single column form e.g. Create an Account */

div.col1-layout form { 
    margin: 0 auto;
    width:50%
}

div.col1-layout .col2-set form {
    margin:0;
    width:auto;
}

div.col1-layout form input {
    width:100%;
}

div.col1-layout .col2-set form input {
    width:250px;
}

div.col1-layout form input.checkbox {
    width:auto;
}

div.col1-layout form div.buttons-set button {
    float:right;
}

/* Cart page layout */

div.col2-set {
    float: left;
    overflow: hidden;
    width: 640px;
}

div.col2-set div.col-1,
div.col2-set div.col-2 {
    float: left;
    width: 50%;
}

div.col1-layout div.col2-set {
    width:100%;
}

body.checkout-cart div.col1-layout div.col2-set {
    width:640px;
}

body.checkout-cart div.block-related,
form#discount-form,
aside.shipping {
    border: 1px solid;
    -moz-border-radius: 5px;
    border-radius: 5px;
    float: left;
    margin-right: 20px;
    margin-bottom: 20px;
    padding: 15px 20px 20px 20px;
    min-width: 258px;
}

/* Discount form */

form#discount-form {
    margin-bottom: 20px;
}

form#discount-form input#coupon_code {
    margin-top: 5px;
    margin-bottom: 20px;
    width: 94%;
}

form#discount-form input.button {
    float: right;
    width:auto;
}

/* Shipping form */

aside.shipping form ul {
    margin-bottom: 20px;
}
/* ... */

